--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -11,7 +11,7 @@
     <div class="login-left">
         <div class="login-left-inner">
 
-            <img src="/img/mascotas1.jpg" alt="Mascotas" class="circle-img">
+            <img src="/img/MascotasLogin.png" alt="Mascotas" class="circle-img">
             <h2>Únete a <span style="color:#1A7D7D;">PetCare</span></h2>
             <p>
                 Crea tu cuenta para gestionar la salud y el bienestar de tu compañero.
