--- a/src/main/resources/templates/mascota_form.html
+++ b/src/main/resources/templates/mascota_form.html
@@ -13,8 +13,8 @@
     <a href="/inicio">Inicio</a>
     <a href="/mascotas">Mi mascota</a>
     <a href="/agenda">Agenda</a>
-    <a href="#">Servicios</a>
-    <a href="#">Comunidad</a>
+    <a href="/servicios">Servicios</a>
+    <a href="/comunidad">Comunidad</a>
   </div>
   <div class="user">
     <span th:if="${session.usuarioNombre}">👤 <b th:text="${session.usuarioNombre}">usuario</b></span>
